Dark Mode Fix

--- a/assets/styles/media.css
+++ b/assets/styles/media.css
@@ -53,7 +53,7 @@
         --transparent-bg: rgba(0,0,0,0.8);
     }
     img {
-        filter: brightness(0.85);
+        filter: brightness(0.9);
     }
     .repo-list-item {
         background-color: var(--background-alt3);
